--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,9 @@
     <uses-feature android:name="android.hardware.camera" />
    <application
         android:label="Dreampay"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:extractNativeLibs="false">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
