--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   #qr_code_dart_scan: ^0.2.0
   qr_code_scanner: ^0.5.2
   qr_flutter: ^4.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
