--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,13 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.3
-  uni_links: ^0.5.1
   shared_preferences: ^2.0.8
   url_launcher: ^6.0.20
-  #qr_code_dart_scan: ^0.2.0
   qr_code_scanner: ^0.7.0
   qr_flutter: ^4.0.0
   intl: ^0.17.0
+  #uni_links: ^0.5.1
+  #qr_code_dart_scan: ^0.2.0
 
 dev_dependencies:
   flutter_test:
