--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,6 +39,7 @@ dependencies:
   qr_code_scanner: ^0.7.0
   qr_flutter: ^4.0.0
   intl: ^0.17.0
+  dropdown_search: ^2.0.1
   #uni_links: ^0.5.1
   #qr_code_dart_scan: ^0.2.0
 
