--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,11 @@ dependencies:
   http: ^0.13.3
   shared_preferences: ^2.0.8
   url_launcher: ^6.0.20
-  qr_code_scanner: ^0.7.0
+  qr_code_scanner: ^1.0.1
   qr_flutter: ^4.0.0
   intl: ^0.17.0
   dropdown_search: ^2.0.1
+  file_picker: ^5.2.3
   #uni_links: ^0.5.1
   #qr_code_dart_scan: ^0.2.0
 
